# bandicoot

./: CMakeLists.txt  bandicoot.cpp  bandicoot.h  bandicoot.pc.in  main.cpp
